Fix: Enable sidebar scrollbar visibility in admin panel

--- a/public/admin/styles/main.css
+++ b/public/admin/styles/main.css
@@ -806,9 +806,6 @@ img {
   width: 100%;
   height: calc(100vh - 86px);
   overflow-y: auto;
-  -ms-overflow-style: none;
-  /* Internet Explorer 10+ */
-  scrollbar-width: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -818,10 +815,6 @@ img {
           flex-direction: column;
 }
 
-.sidebar__menu::-webkit-scrollbar {
-  display: none;
-  /* Safari and Chrome */
-}
 
 .sidebar__menu li:not(:first-child) {
   margin-top: 0px;
